--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
     <iframe src="settings.html" frameborder="0" style="width: 100%; height: 100vh;"></iframe>
 </div>
 <div class="img2">
-    <a href="https://play.google.com/"><img src="images\google-play-badge.png" alt="Google Play"></a>
+    <a href="https://median.co/share/jxyojw#apk"><img src="images\google-play-badge.png" alt="Google Play"></a>
     
-    <a href="https://consumer.huawei.com/en/mobileservices/appgallery/"><img src="images/huawei-Badge-Black-768x231.png" alt="Huawei"></a>
+    <a href="https://median.co/share/jxyojw#apk"><img src="images/huawei-Badge-Black-768x231.png" alt="Huawei"></a>
 </div>
     <div class="img3">
 <h6></h6>
