--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="IMAGES\logo.png" type="image/png">
-  <title>Settings</title>
+  <title>Profile</title>
   <style>
 /* General Reset */
 * {
@@ -145,7 +145,7 @@ input {
 /* Footer */
 footer p {
     color: #666;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
 }
 
 /* Toggle Switch */
@@ -490,6 +490,7 @@ body.dark-mode .logo {
   </style>
 </head>
 <body>
+
   
   <!-- Mortgage Calculator Modal -->
   <div id="mortgage-modal" class="modal">
